apps/gi/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gi
  labels:
    app.kubernetes.io/name: gi
    app.kubernetes.io/part-of: gi
spec:
  selector:
    app.kubernetes.io/name: gi
  ports:
    - name: http
      port: 80
      targetPort: http
