apps/gi/manifests/authentik-forward-auth.yaml
apiVersion: v1
kind: Service
metadata:
  name: authentik-server-gi
  namespace: gi
spec:
  type: ExternalName
  externalName: authentik-server.authentik.svc.cluster.local
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gi-authentik-outpost
  namespace: gi
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - gi.soyspray.vip
      secretName: prod-cert-tls
  rules:
    - host: gi.soyspray.vip
      http:
        paths:
          - path: /outpost.goauthentik.io
            pathType: Prefix
            backend:
              service:
                name: authentik-server-gi
                port:
                  number: 80
